2007-10-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/23854:
	* java/util/zip/ZipEntry.java:
	(parseExtra()): Pass time to setTime in milliseconds
	rather than seconds by multiplying by 1000.
	
2007-09-27  Mario Torre  <neugens@limasoftware.net>

	* gnu/javax/sound/sampled/gstreamer/io/GstAudioFileReaderNativePeer.java:
	(gstreamer_get_audio_format_stream): Removed parameter from javadoc.
	(gstreamer_get_audio_format_file): likewise.
	* gnu/javax/sound/sampled/gstreamer/lines/GstPipeline.java:
	Added class javadoc and implementation notes.
	(READ): new constant.
	(WRITE): likewise.
	(QUEUED): likewise.
	(CAPACITY_KEY): likewise.
	(lock): likewise.
	(prefs): new variable.
	(GstPipeline constructor): added OS independent rutines to detect
	filesystem pipes size plus save and restores this information via
	preferences. Now closes open pipe on user abort at VM exit.
	(open_native_pipe): new native method.
	(close_native_pipe): likewise.
	(detect_pipe_size): likewise.
	(createForWrite): update to use new native methods.
	(setState): removed hack to synchronize reading and writing of the
	filesystme named pipe.
	(available): implemented.
	(drain): new implementation, now correctly waits for data to be consumed
	in the pipeline.
	(prepareWrite): removed hack to synchronize reading and writing of the
	filesystme named pipe.
	(CleanPipeline): new inner class, used for cleaning of native pipelines
	still opened at VM exit.
	* gnu/javax/sound/sampled/gstreamer/lines/GstSourceDataLine:
	(getFramePosition): method still stubbed, now output "implement me"
	note when called (used for testing).
	(getLongFramePosition): likewise.
	(getMicrosecondPosition): likewise.
	* include/gnu_javax_sound_sampled_gstreamer_lines_GstPipeline.h:
	regenerated.
	* native/jni/gstreamer-peer/gst_native_data_line.c:
	(setup_pipeline): Changed signature, now uses a file descriptor instead of
	char with the name of the native pipeline. Also changed to use "fdsrc"