@@ -1,3 +1,13 @@
+2007-10-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	PR classpath/33623:
+	* examples/Makefile.am:
+	Exit with no compiler.
+	* lib/Makefile.am: Likewise.
+	* m4/acinclude.m4: Handle ecj and javac
+	using separate variables and catch when JAVAC/ECJ is
+	empty.
+	
 2007-10-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	PR classpath/23854:
